# exar

./: .gitignore  CHANGELOG.md  README.md  flake.nix  pyproject.toml
.github/workflows/: release.yml
